--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sound Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/wavesurfer.js@7"></script>
   <script src="https://unpkg.com/wavesurfer.js@7/dist/plugins/spectrogram.min.js"></script>
@@ -21,7 +22,7 @@
     <div class="flex flex-col justify-between h-[90%]">
     <div class="flex flex-col">
       <button class="py-2 px-4 text-gray-400 hover:bg-gray-700 hover:text-white" onclick="document.getElementById('audioUpload').click();">Upload</button>
-      <button class="py-2 px-4 text-gray-400 hover:bg-gray-700 hover:text-white" id="demo">Load Demo</button>
+      <!-- <button class="py-2 px-4 text-gray-400 hover:bg-gray-700 hover:text-white" id="demo">Load Demo</button> -->
       <button class="py-2 px-4 text-gray-400 hover:bg-gray-700 hover:text-white" id="reset">Clear</button>
     </div>
       <!-- align the button at the bottom-->
