Add comments and references

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sound Dashboard</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Using Tailwind, WaveSurfer, and Plotly here -->
+  <script src="https://cdn.tailwindcss.com"></script> 
   <script src="https://unpkg.com/wavesurfer.js@7"></script>
   <script src="https://cdn.jsdelivr.net/npm/wavesurfer.js@7/dist/plugins/spectrogram.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-2.35.2.min.js" charset="utf-8"></script>
